Revision history for Mojo-Redis2

0.03
       * Add watch() to Mojo::Redis2::Transaction

0.02     Wed Aug  6 10:20:32 2014
       * Fix the order commands are sent
       * Fix missing dependency: Protocol::Redis
       * Add support for transactions

0.01     Tue Aug  5 13:32:27 2014
       * Started project
       * Add blocking support
       * Add message/pmessage events for pub/sub
       * Add support for basic Redis operations
       * Add error handling
       * Can start Redis server